[tool.poetry]
name = "datascience"
version = "0.1.0"
description = ""
authors = ["Jova <jjsl> <jjsl@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
pandas = "^2.0.3"
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
